Fixed popup that was behind some elements
Changed z-index of the modal to 1000 to make sure the popup is on top of everything.

--- a/extension/src/inject/inject.css
+++ b/extension/src/inject/inject.css
@@ -7,17 +7,13 @@
     padding-left:20px;
     height:30px;
  }
-.chatHighlight {
-    color: yellow;
-    font-weight: bold;
-}
 
 /*MODAL*/
 /* The Modal (background) */
 #IU-modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 1000; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
